src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__author_details_ui__author_details_ui_tests__tests__snapshot_tests__empty_author_details_AuthorHistoryDetails.snap
---
source: src/ui/readarr_ui/library/author_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Test Author  ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Author: Test Author                                                                                                                                │        
        │Overview: some interesting description of the author                                                                                               │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: science fiction                                                                                                                            │        
        │Rating: N/A                                                                                                                                        │        
        │Path: /nfs/books/Test Author                                                                                                                       │        
        │Quality Profile: Standard                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │                                                                                                                                                   │        
        │╭  Author Details  ─────────────╭───────────────────────────────────  Details  ───────────────────────────────────╮───────────────────────────────╮│        
        ││ Books │ History │ Author Searc│Source Title:                                                                    │                               ││        
        ││───────────────────────────────│Event Type: unknown                                                              │───────────────────────────────││        
        ││                               │Quality:                                                                         │                               ││        
        ││                               │Date: 1970-01-01 00:00:00 UTC                                                    │                               ││        
        ││                               │No additional details available.                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               ╰─────────────────────────────────────────────────────────────────────────────────╯                               ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
